--- a/client/css/style.css
+++ b/client/css/style.css
@@ -14,6 +14,8 @@ html, body {
   background-color: rgba(255, 255, 0, 0.5);
   padding: 5px;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
 }
 #menu.menu-open {
   left: 0px;
@@ -117,7 +119,7 @@ canvas {
   display: flex;
   flex-wrap: wrap;
   overflow: scroll;
-  height: 300px;
+  flex: 1;
 }
 #menu-frames li {
   background-color: gray;
